--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -5,8 +5,10 @@
         <title>Title</title>
     </head>
     <body>
-
-
+    <div id="smth">Hello</div>
+    <script>
+        document.getElementById('smth').innerText = 'World!!!';
+    </script>
 
     </body>
 </html>
